--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -19,13 +19,15 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.19
-
-      - name: Run goreleaser
+          
+      - name: Install dependencies
         run: |
-          curl -sfL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | sh
-          go mod tidy
-          go mod vendor
-          ./bin/goreleaser --snapshot --rm-dist
+          go mod download
+          go get github.com/goreleaser/goreleaser@v0.186.0
+          sudo apt-get install -y rpm
+      - name: Build and package for release
+        run: |
+          goreleaser --rm-dist
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
