--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -20,14 +20,10 @@ jobs:
         with:
           go-version: 1.19
           
-      - name: Install dependencies
+      - name: Install goreleaser
         run: |
-          go mod download
-          go get github.com/goreleaser/goreleaser@latest
-          sudo apt-get install -y rpm
-      - name: Build and package for release
-        run: |
-          goreleaser --rm-dist
+         curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash -s -- -b /usr/local/bin 
+         --snapshot --rm-dist
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
