--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -22,8 +22,8 @@ jobs:
           
       - name: Install goreleaser
         run: |
-         curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash -s -- -b /usr/local/bin 
-         --snapshot --rm-dist
+         curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash -s -- -b 
+         /usr/local/bin/goreleaser --snapshot --rm-dist
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
