--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -26,11 +26,16 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        
+      - name: Get branch name
+        id: get_branch
+        run: echo "::set-output name=branch::${{ github.ref }}"
 
       - name: Build and push Docker image
         env:
+          DOCKER_IMAGE_TAG: ${{ steps.get_branch.outputs.branch }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
           docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 --push --tag ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ github.ref }} .
+          docker buildx build --platform linux/amd64,linux/arm64 --push --tag ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG} .
