--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -27,15 +27,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
-      - name: Get branch name
-        id: get_branch
-        run: echo "::set-output name=branch::${{ github.ref }}"
+      - name: Get GitHub release tag
+        id: get_tag
+        run: echo "::set-output name=tag::${{ github.ref }}"
 
       - name: Build and push Docker image
         env:
-          DOCKER_IMAGE_TAG: ${{ steps.get_branch.outputs.branch }}
+          DOCKER_IMAGE_TAG: ${{ steps.get_tag.outputs.tag }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64 --push --tag ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG} .
+          docker build --tag ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG} .
+          docker push ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG}
