--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -29,13 +29,18 @@ jobs:
         
       - name: Get GitHub release tag
         id: get_tag
-        run: echo "::set-output name=tag::${{ github.ref }}"
+        run: echo "GIT_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         env:
-          DOCKER_IMAGE_TAG: ${{ steps.get_tag.outputs.tag }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
-        run: |
-          docker build --tag ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/super_calculator:${DOCKER_IMAGE_TAG}
+          IMAGE_TAG: ${{ env.GIT_TAG }}      
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: $DOCKER_USERNAME/super_calculator:$IMAGE_TAG
+          username: $DOCKER_USERNAME
+          password: $DOCKER_PASSWORD
+       
