--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: $DOCKER_USERNAME/super_calculator:$IMAGE_TAG
-          username: $DOCKER_USERNAME
-          password: $DOCKER_PASSWORD
+          tags: ${DOCKER_USERNAME}/super_calculator:${IMAGE_TAG}
+          username: ${DOCKER_USERNAME}
+          password: ${DOCKER_PASSWORD}
        
