--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -33,14 +33,12 @@ jobs:
 
       - name: Build and push Docker image
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
           IMAGE_TAG: ${{ env.GIT_TAG }}      
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${DOCKER_USERNAME}/super_calculator:${IMAGE_TAG}
-          username: ${DOCKER_USERNAME}
-          password: ${DOCKER_PASSWORD}
+          tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:$IMAGE_TAG
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
        
