--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -28,17 +28,14 @@ jobs:
         uses: docker/setup-buildx-action@v1
         
       - name: Get GitHub release tag
-        id: get_tag
         run: echo "GIT_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
-      - name: Build and push Docker image
-        env:
-          IMAGE_TAG: ${{ env.GIT_TAG }}      
+      - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:$IMAGE_TAG
+          tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ env.GIT_TAG }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
        
