--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -29,13 +29,15 @@ jobs:
         
       - name: Get GitHub release tag
         run: echo "GIT_TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-
+      
+      - id: docker-tag
+        uses: yuya-takeyama/docker-tag-from-github-ref-action@v1  
       - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ github.tag_name }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ steps.docker-tag.outputs.tag }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
        
