--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -27,19 +27,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         
+      - name: Get release tag
+      - id: docker-tag
+        uses: yuya-takeyama/docker-tag-from-github-ref-action@v1
+        
       - name: Dockerhub connection
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}          
-          
-      - name: Get release tag
-      - id: docker-tag
-        uses: yuya-takeyama/docker-tag-from-github-ref-action@v1
       - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ steps.docker-tag.outputs.tag }}
