--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -28,14 +28,15 @@ jobs:
         uses: docker/setup-buildx-action@v1
         
       - name: Get release tag
-      - id: docker-tag
+        id: docker-tag
         uses: yuya-takeyama/docker-tag-from-github-ref-action@v1
         
       - name: Dockerhub connection
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}          
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
