--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -37,6 +37,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
+      - name: Clear docker build cache
+        run: |
+         docker builder prune --force
+          
       - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
