--- a/.github/workflows/release_workflow.yml
+++ b/.github/workflows/release_workflow.yml
@@ -37,10 +37,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
-      - name: Clear docker build cache
-        run: |
-         docker builder prune --force
-          
       - name: Build and push Docker image    
         uses: docker/build-push-action@v2
         with:
@@ -48,3 +44,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/super_calculator:${{ steps.docker-tag.outputs.tag }}
+          nocache: true
